Add Page for All Categories and Made some Changes
- Add Page for All Categories and it's Featured Image (+ the README.md File for Credits/Attribution)
- Compress Existing Images
- Category: "Web/Blog" -> "Web dan Blog"
- Config: Ignore "README.md" files when using Hugo for generates Static Blog
- Config: Add CDN URL for Serving SVG files
- Some Updates in Categories and Tags Page List

--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,9 @@ content-dir: content
 DefaultContentLanguage: id
 disqusShortname: farrelf-blog
 
+ignoreFiles:
+  - README.md
+
 permalinks:
   post: /:slug/
   page: /:slug/
@@ -37,6 +40,8 @@ params:
   CDN:
     Images:
       URL: https://cdn.statically.io/img/static.farrel.franqois.id/f=auto
+    SVG:
+      URL: https://cdn.statically.io/img/static.farrel.franqois.id
     JS:
       URL: https://cdn.statically.io/js/static.farrel.franqois.id
     CSS:
