--- a/config.yaml
+++ b/config.yaml
@@ -39,13 +39,13 @@ params:
 
   CDN:
     Images:
-      URL: https://cdn.statically.io/img/static.farrel.franqois.id/f=auto
+      URL: https://cdn.statically.io/img/farrel.franqois.id/f=auto
     SVG:
-      URL: https://cdn.statically.io/img/static.farrel.franqois.id
+      URL: https://cdn.statically.io/img/farrel.franqois.id
     JS:
-      URL: https://cdn.statically.io/js/static.farrel.franqois.id
+      URL: https://cdn.statically.io/js/farrel.franqois.id
     CSS:
-      URL: https://cdn.statically.io/css/static.farrel.franqois.id
+      URL: https://cdn.statically.io/css/farrel.franqois.id
     Fonts:
       URL: https://cdn.statically.io/gh/FarrelF/Blog/8586e96/static/fonts
 
