Article Update and Changes of Serving Fonts
Plus:
- Move all font files to `assets` from `static` folder
- Delete all 'eot' and 'ttf' font files since this Site only supports Modern Browsers
- Use Inline CSS for Serving Fonts instead of using External Files
- Delete `font.css` and `font.min.css` files
- Change of Fonts CDN URL in `config.yaml`

--- a/config.yaml
+++ b/config.yaml
@@ -52,7 +52,7 @@ params:
     CSS:
       URL: https://cdn.statically.io/css/farrel.franqois.id
     Fonts:
-      URL: https://cdn.statically.io/gh/FarrelF/Blog/8586e96/static/fonts
+      URL: https://cdn.statically.io/css/farrel.franqois.id
 
   arcio:
     # Check https://arc.io
