--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,7 @@ params:
 
   arcio:
     # Check https://arc.io
-    enabled: true
+    enabled: false
     widgetId: D1Tc1z8H
 
   mainSections:
@@ -115,7 +115,7 @@ params:
   Twemoji:
     enabled: true
     Options:
-      baseURL: https://cdn.jsdelivr.net/gh/twitter/twemoji@13.0.2/
+      baseURL: https://cdn.statically.io/gh/twitter/twemoji/v13.1.0/
       Path: assets/svg
       Ext: .svg
 
