--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -62,7 +62,8 @@ jobs:
         rm hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz LICENSE README.md
         cd ${GITHUB_WORKSPACE}
         which hugo && hugo version
-        git ls-tree -rtl HEAD:content/post --full-tree > post-tree.hash
+        IMAGES=$(find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}')
+        sha256sum $(printf "%s" ${IMAGES}) > Image.list
         git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
 
     - name: Set up Hugo Resources Cache
@@ -71,10 +72,11 @@ jobs:
         path: |
           ./cache
           ./resources
-        key: v1-2-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
+        key: v2-hugo-${{ hashFiles('**/Image.list') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
         restore-keys: | 
-          - v1-2-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
-          - v1-2-hugo-${{ hashFiles('**/post-tree.hash') }}-${{ hashFiles('**/layouts-tree.hash') }}-
+          - v2-hugo-${{ hashFiles('**/Image.list') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
+          - v2-hugo-${{ hashFiles('**/Image.list') }}-${{ hashFiles('**/layouts-tree.hash') }}-
+          - v2-hugo-${{ hashFiles('**/Image.list') }}-
 
     - name: Building the Blog HTML
       run: |
@@ -83,7 +85,7 @@ jobs:
         tar cvf - ./public | pigz -9 > files.tar.gz
 
     - name: Upload Output File to Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v24
       with:
         name: site-outputs
         path: files.tar.gz
