GitHub Actions: Fix `unexpected token `)'` error

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -63,7 +63,7 @@ jobs:
         rm hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz LICENSE README.md
         cd ${GITHUB_WORKSPACE}
         which hugo && hugo version
-        find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}') > Images.list
+        find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}' > Images.list
         sha256sum $(cat Images.list) > Images.hash.list
         git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
     
