GitHub Actions: Fix Pull Zone ID for Preview

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -113,7 +113,7 @@ jobs:
         BUNNY_API_ACCESS_KEY: ${{ secrets.BUNNY_API_KEY }}
         BUNNY_STORAGE_USERNAME: ${{ secrets.BUNNY_PREVIEW_STORAGE_USERNAME }}
         BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_PREVIEW_STORAGE_PASSWORD }}
-        BUNNY_PULL_ZONE_ID: ${{ secrets.BUNNY_PULLZONE_ID }}
+        BUNNY_PULL_ZONE_ID: ${{ secrets.BUNNY_PREVIEW_PULLZONE_ID }}
       with:
         args: deploy --dir=./public
 
