--- a/config.preview.yaml
+++ b/config.preview.yaml
@@ -5,6 +5,8 @@ paginate: 5
 enableEmoji: true
 enableInlineShortcodes: true
 content-dir: content
+timeout: 1200000
+timeZone: "Asia/Jakarta"
 
 DefaultContentLanguage: id
 
