Article and Page Updates and more
Article Updates:
- Cara memasang ZeroSSL + Renew Otomatis di Netlify dan BunnyCDN
- Apa itu Cloudflare? Perlukah untuk menggunakan nya?
- Cara menghemat Konsumsi Bandwidth Server (Minor Changes)

Page Updates:
- Ketentuan dan Kebijakan Blog
- Tentang
- Buku tamu

Site Configuration:
-  Using Configuration Directory instead of a single file for easier to maintain
- Change Site Subtitle
- Add Response Header for Development Server
- Add `enableGitInfo` in Default Site Configuration

GitHub Actions:
- Change a Cache Key
- Remove `--enableGitInfo` parameter to execute Hugo

Netlify:
- Update Hugo Version
- Remove `--enableGitInfo` parameter to execute Hugo

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -72,16 +72,15 @@ jobs:
         path: |
           ./cache
           ./resources
-        key: v2-hugo-${{ hashFiles('**/Images.hash.list') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
+        key: v2-1-hugo-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/Images.hash.list') }}
         restore-keys: | 
-          - v2-hugo-${{ hashFiles('**/Images.hash.list') }}-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/config.yaml') }}
-          - v2-hugo-${{ hashFiles('**/Images.hash.list') }}-${{ hashFiles('**/layouts-tree.hash') }}-
-          - v2-hugo-${{ hashFiles('**/Images.hash.list') }}-
+          - v2-1-hugo-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/Images.hash.list') }}
+          - v2-1-hugo-${{ hashFiles('**/layouts-tree.hash') }}-
 
     - name: Building the Blog HTML
       run: |
         rm static/robots_preview
-        hugo --gc --minify --enableGitInfo --cacheDir ${PWD}/cache
+        hugo --gc --minify --cacheDir ${PWD}/cache
         tar cvf - ./public | pigz -9 > files.tar.gz
 
     - name: Upload Output File to Artifact
