--- a/netlify.toml
+++ b/netlify.toml
@@ -2,26 +2,26 @@
     publish = "public"
 
 [build.environment]
-    HUGO_VERSION = "0.87.0"
+    HUGO_VERSION = "0.88.1"
     TZ = "Asia/Jakarta"
 
 [context.production]
-    command = "rm static/robots_preview; hugo --minify --gc --enableGitInfo"
+    command = "rm static/robots_preview; hugo --minify --gc"
     [context.production.environment]
         HUGO_ENV = "production"
 
 [context.split1]
-    command = "rm static/robots_preview; hugo --minify --gc --enableGitInfo"
+    command = "rm static/robots_preview; hugo --minify --gc"
     [context.split1.environment]
         HUGO_ENV = "production"
 
 [context.deploy-preview]
-    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify --enableGitInfo --config config.preview.yaml --buildFuture -b ${DEPLOY_PRIME_URL}"
+    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify --buildFuture -b ${DEPLOY_PRIME_URL}"
     [context.deploy-preview.environment]
         HUGO_ENV = "staging"
 
 [context.branch-deploy]
-    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify --config config.preview.yaml -b ${DEPLOY_PRIME_URL}"
+    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify -b ${DEPLOY_PRIME_URL}"
     [context.branch-deploy.environment]
         HUGO_ENV = "staging"
 
