Move all modified theme files to `themes/stack-modified`, except Shortcodes
Configuration:
- Add `stack-modified` in the `theme` field

GitHub Actions:
- Change the GitHub Actions Cache Key

.gitignore:
- Tidy up the file with add comments
- Remove `config.dev.yaml` since I don't using it again
- `/assets/jsconfig.json` -> `jsconfig.json`
- Add Hugo Executable Files

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -62,9 +62,9 @@ jobs:
         rm hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz LICENSE README.md
         cd ${GITHUB_WORKSPACE}
         which hugo && hugo version
-        find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}' > Images.list
-        sha256sum $(cat Images.list) > Images.hash.list
-        git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
+        # find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}' > Images.list
+        # sha256sum $(cat Images.list) > Images.hash.list
+        # git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
 
     - name: Set up Hugo Resources Cache
       uses: actions/cache@v2
@@ -72,10 +72,9 @@ jobs:
         path: |
           ./cache
           ./resources
-        key: v2-1-hugo-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/Images.hash.list') }}
+        key: v2-2-hugo
         restore-keys: | 
-          - v2-1-hugo-${{ hashFiles('**/layouts-tree.hash') }}-${{ hashFiles('**/Images.hash.list') }}
-          - v2-1-hugo-${{ hashFiles('**/layouts-tree.hash') }}-
+          - v2-2-hugo
 
     - name: Building the Blog HTML
       run: |
