--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,6 +1,9 @@
 languageCode: id-id
 title: Farrel Franqois Blog
-theme: hugo-theme-stack
+theme: 
+  - stack-modified
+  - hugo-theme-stack
+
 paginate: 5
 enableEmoji: true
 enableInlineShortcodes: true
