README.md Update, Add CONTRIBUTING.md and more
- GItHub Actions: Ignore all files and folders in `config/development` and `archetypes` directiory
- Add README.md files in `themes`, `content` and `config` directory
- Modifying Archetypes and Add `post` Archetypes

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,6 +10,8 @@ on:
       - "**/CONTRIBUTING.md"
       - "**/.gitignore"
       - "**/netlify.toml"
+      - "config/development/**"
+      - "archetypes/**"
 
 jobs:
   build:
