--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -11,6 +11,8 @@ on:
       - "**/CONTRIBUTING.md"
       - "**/.gitignore"
       - "**/netlify.toml"
+      - "config/development/**"
+      - "archetypes/**"
 
 jobs:
   build:
