Move `archetypes` to `stack-modified` and Fix Link [skip ci]

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -12,7 +12,7 @@ on:
       - "**/.gitignore"
       - "**/netlify.toml"
       - "config/development/**"
-      - "archetypes/**"
+      - "**/archetypes/**"
 
 jobs:
   build:
