--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -11,7 +11,7 @@ on:
       - "**/.gitignore"
       - "**/netlify.toml"
       - "config/development/**"
-      - "archetypes/**"
+      - "**/archetypes/**"
 
 jobs:
   build:
