--- a/config/production/params.yaml
+++ b/config/production/params.yaml
@@ -1,6 +1,6 @@
 CDN:
   Images:
-    URL: https://cdn.statically.io/img/farrel.franqois.id/f=auto
+    URL: https://cdn.statically.io/img/farrel.franqois.id
   SVG:
     URL: https://cdn.statically.io/img/farrel.franqois.id
   JS:
