Re-add `f=auto` and add `q=40`

--- a/config/production/params.yaml
+++ b/config/production/params.yaml
@@ -1,6 +1,6 @@
 CDN:
   Images:
-    URL: https://cdn.statically.io/img/farrel.franqois.id
+    URL: https://cdn.statically.io/img/farrel.franqois.id/q=40,f=auto
   SVG:
     URL: https://cdn.statically.io/img/farrel.franqois.id
   JS:
