Using Relative Permalink for Image links instead CDN
Plus: Fix Config Break Line and Writing Style

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -10,9 +10,9 @@ enableInlineShortcodes: true
 enableGitInfo: true
 content-dir: content
 timeout: 1200000
-timeZone: "Asia/Jakarta"
+timeZone: Asia/Jakarta
 
-DefaultContentLanguage: id
+defaultContentLanguage: id
 
 ignoreFiles:
   - README.md
