Delete `q=40` in Statically Images URL

--- a/config/production/params.yaml
+++ b/config/production/params.yaml
@@ -1,6 +1,6 @@
 cdn:
   images:
-    url: https://cdn.statically.io/img/farrel.franqois.id/q=40,f=auto
+    url: https://cdn.statically.io/img/farrel.franqois.id/f=auto
     permalinks: false
   svg:
     url: https://cdn.statically.io/img/farrel.franqois.id
