Migrate to Hugo Modules from Git Submodule
Root Repository:
- Remove `themes` folder
- `README.md` and `CONTRIBUTING.md` file Update
- Remove `themes/hugo-stack-theme` Submodules
- Remove `.gitmodules` file
- Add `go.mod` and `go.sum` files

Site Configuration:
- Add `module.yaml` in `_default` and `development` Configuration
- Set Hugo Requirements
- Set Hugo Modules Imports
- Set Hugo Modules Import Replacement for Local Development
- Remove `theme` in `_default/config.yaml`

GitHub Actions:
- Change existing Cache Key
- Set up Hugo Modules Cache
- Checkout the Code withour Submodules
- Install Go after Code Checkout

Netlify:
- Set Go Version
- Update Hugo Version

.gitignore:
- Add `/_vendor` to .gitignore list

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,8 @@
     publish = "public"
 
 [build.environment]
-    HUGO_VERSION = "0.89.0"
+    HUGO_VERSION = "0.89.3"
+    GO_VERSION = "1.17.3"
     TZ = "Asia/Jakarta"
 
 [context.production]
