--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -27,7 +27,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        submodules: true
+
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: '^1.17.3'
 
     - name: Install and Set up Locales and Other Packages
       run: |
@@ -73,11 +77,20 @@ jobs:
       uses: actions/cache@v2
       with:
         path: |
-          ./cache
           ./resources
-        key: v2-3-hugo-preview
+        key: v2-4-hugo-preview
         restore-keys: | 
-          - v2-3-hugo-preview
+          - v2-4-hugo-preview
+
+    - name: Set up Hugo Modules Cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          ./cache/modules
+        key: v1-0-hugo-modules-{{ hashFiles('**/go.sum') }}
+        restore-keys: | 
+          - v1-0-hugo-modules-{{ hashFiles('**/go.sum') }}
+          - v1-0-hugo-modules
 
     - name: Building the Blog HTML (Preview)
       run: |
