Disable External CDN Usage (but not all), Add Italic Fonts, etc.
Modified Theme Module Update, changelog: See FarrelF/stack-modified@3bac2592e3121f6ee0b56e90f972d078ba156140

--- a/config/production/params.yaml
+++ b/config/production/params.yaml
@@ -1,15 +1,15 @@
-cdn:
-  images:
-    url: https://cdn.statically.io/img/farrel.franqois.id/f=auto
-    permalinks: false
-  svg:
-    url: https://cdn.statically.io/img/farrel.franqois.id
-  js:
-    url: https://cdn.statically.io/js/farrel.franqois.id
-  css:
-    url: https://cdn.statically.io/css/farrel.franqois.id
-  fonts:
-    url: https://cdn.statically.io/css/farrel.franqois.id
+#cdn:
+#  images:
+#    url: https://cdn.statically.io/img/farrel.franqois.id/f=auto
+#    permalinks: false
+#  svg:
+#    url: https://cdn.statically.io/img/farrel.franqois.id
+#  js:
+#    url: https://cdn.statically.io/js/farrel.franqois.id
+#  css:
+#    url: https://cdn.statically.io/css/farrel.franqois.id
+#  fonts:
+#    url: https://cdn.statically.io/css/farrel.franqois.id
 
 arcio:
   # Check https://arc.io
