Self-host Twemoji and Set Avatar Resolution to 240px
Plus: Update Hugo Version on Netlify to 0.91.1

--- a/config/_default/module.yaml
+++ b/config/_default/module.yaml
@@ -5,3 +5,7 @@ hugoVersion:
 imports:
   - path: github.com/FarrelF/stack-modified
   - path: github.com/CaiJimmy/hugo-theme-stack
+  - path: github.com/twitter/twemoji
+    mounts:
+    - source: assets/svg
+      target: static/twemoji/13.1.0/svg
