--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -89,7 +89,6 @@ jobs:
         key: v1-0-hugo-modules-{{ hashFiles('**/go.sum') }}
         restore-keys: | 
           - v1-0-hugo-modules-{{ hashFiles('**/go.sum') }}
-          - v1-0-hugo-modules
 
     - name: Building the Blog HTML (Preview)
       run: |
@@ -99,8 +98,8 @@ jobs:
 
     - name: Compressing Static Web Files
       run: |
-        pigz -k -9 $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.xml')
-        brotli -Z $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.xml')
+        pigz -k -9 $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.xml' -o -iname '*.svg')
+        brotli -Z $(find public -iname '*.html' -o -iname '*.css' -o -iname '*.js' -o -iname '*.xml' -o -iname '*.svg')
         tar cvf - ./public | pigz -9 > files.tar.gz
 
     - name: Upload Output File to Artifact
